# angkasa-personal-website-assistant

./: .gitignore  README.md  check.py  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: chat.py
app/core/: config.py  google_ai.py  prompts.py  vector_db.py
app/core/system_prompt/: ask_prompt.txt  val_prompt.txt
app/models/: chat.py
app/services/: chat.py
tests/: test_endpoints.py  test_integration_chat.py
