[project]
name = "personal-website-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.12",
    "langchain-google-genai>=4.2.0",
    "langchain-pinecone>=0.2.13",
    "langfuse>=3.14.2",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]
